Fix kps_to_BB and augment

--- a/creating_playing_cards_dataset.ipynb
+++ b/creating_playing_cards_dataset.ipynb
@@ -743,7 +743,6 @@
    ],
    "source": [
     "video_dir=\"data/video\"\n",
-    "video_dir=\"/big/DATA/gxcards/video\"\n",
     "extension=\"avi\"\n",
     "imgs_dir=\"data/cards\"\n",
     "\n",
@@ -1254,7 +1253,10 @@
     "    kpsy=[kp.y for kp in kps.keypoints]\n",
     "    miny=max(0,int(min(kpsy)-extend))\n",
     "    maxy=min(imgH,int(max(kpsy)+extend))\n",
-    "    return ia.BoundingBox(x1=minx,y1=miny,x2=maxx,y2=maxy)\n",
+    "    if minx==maxx or miny==maxy:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return ia.BoundingBox(x1=minx,y1=miny,x2=maxx,y2=maxy)\n",
     "\n",
     "\n",
     "# imgaug keypoints of the bounding box of a whole card\n",
@@ -1310,7 +1312,7 @@
     "        valid=True\n",
     "        # Check the card bounding box stays inside the image\n",
     "        for bb in list_bbs:\n",
-    "            if int(round(bb.x2)) >= imgW or int(round(bb.y2)) >= imgH or int(bb.x1)<=0 or int(bb.y1)<=0:\n",
+    "            if bb is None or int(round(bb.x2)) >= imgW or int(round(bb.y2)) >= imgH or int(bb.x1)<=0 or int(bb.y1)<=0:\n",
     "                valid=False\n",
     "                break\n",
     "        if valid: break\n",
